--- a/all.html
+++ b/all.html
@@ -9,33 +9,33 @@
 <body>
     <details>
         <summary>DAY1</summary>
-        <a href="/DAY1/Task1.html">task1</a>
+        <a href="https://lokeshjavvadi.github.io/16r-day1/task2.html">task1</a>
         <br>
-        <a href="/DAY1/task2.html">task2</a>
+        <a href="https://lokeshjavvadi.github.io/16r-day1/Task1.html">task2</a>
     </details>
     <details>
         <summary>DAY2</summary>
-        <a href="/DAY2/task1.html">task1</a>
+        <a href="https://lokeshjavvadi.github.io/16r-day1/task2.html">task1</a>
         <br>
-        <a href="/DAY2/task2.html">task2</a>
+        <a href="https://lokeshjavvadi.github.io/16r-day1/Task1.html">task2</a>
     </details>
     <details>
         <summary>DAY3</summary>
-        <a href="/DAy3/marquee.html">task1</a>
+        <a href="https://lokeshjavvadi.github.io/16r-day1/task2.html">task1</a>
         <br>
-        <a href="/DAY1/task2.html">task2</a>
+        <a href="https://lokeshjavvadi.github.io/16r-day1/Task1.html">task2</a>
     </details>
     <details>
         <summary>DAY4</summary>
-        <a href="/DAY4/task.html">task1</a>
+        <a href="https://lokeshjavvadi.github.io/16r-day1/task2.html">task1</a>
         <br>
-        <a href="/DAY1/task2.html">task2</a>
+        <a href="https://lokeshjavvadi.github.io/16r-day1/Task1.html">task2</a>
     </details>
     <details>
         <summary>DAY5</summary>
-        <a href="/DAY5/task.html">task1</a>
+        <a href="https://lokeshjavvadi.github.io/16r-day1/task2.html">task1</a>
         <br>
-        <a href="/DAY1/task2.html">task2</a>
+        <a href="https://lokeshjavvadi.github.io/16r-day1/Task2.html">task2</a>
     </details>
 </body>
 </html>
